--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@
 
 .debug #jumbo {
     height: 300px;
+    border: dashed red 1px;
+
 }
 
 .debug #portfolio .col {
@@ -35,9 +37,16 @@
     height: 60px;
     border: dashed red 1px;
 }
-
 /* #debug */
-/* region  */
+
+/* region color  */
+.color_header {
+    color: white;
+    background-color: var(--mine_dark);
+}
+
+/* #endregion color  */
+
 #app_header {
     height: 90px;
     background-color: var(--mine_dark);
@@ -56,4 +65,16 @@
 #footer_bottom {
     height: 100px;
     background-color: var(--mine_dark);
+}
+
+/* end region color  */
+
+
+/* mediaquery */
+
+@media screen and (min-width:768px) {
+    .nav-link {
+        display: none;
+    }
+
 }
