--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,42 +5,7 @@
     --mine_medium: #3a546d;
     --mine_dark: #2c3e50;
     --mine_light: white;
-
 }
-
-/* #region Debug */
-
-/* .debug {
-    border: dashed 1px red;
-}
-
-.debug #jumbo {
-    height: 300px;
-    border: dashed red 1px;
-
-}
-
-.debug #portfolio .col {
-    height: 300px;
-    border: dashed red 1px;
-}
-
-.debug #about .row * {
-    height: 250px;
-    border: dashed red 1px;
-}
-
-.debug #contact .row * {
-    height: 60px;
-    border: dashed red 1px;
-}
-
-.debug #footer_top .row * {
-    height: 60px;
-    border: dashed red 1px;
-} */
-/* #debug */
-
 /* utilities */
 .green_btn {
     color: var(--mine_light);
@@ -63,13 +28,10 @@
     height: 8%;
     aspect-ratio: 1/1;
     text-align: center;
-
 }
-
 .d_contents {
     display: contents;
 }
-
 /* #end utilities */
 
 /* region color  */
@@ -78,10 +40,7 @@
     background-color: var(--mine_dark);
 }
 
-.color_light {
-    color: var(--mine_light);
-}
-
+.
 .green_link {
     color: var(--mine_primary);
 }
